--- a/index.html
+++ b/index.html
@@ -163,5 +163,43 @@
         </div>
       </div>
     </section>
+    <section class="sec-c hidden poppins-regular ">
+<div class="mb-5">
+  <p class="p-c">Best Project of the Years</p>
+  <h1 class="h1-c">Our recent projects</h1>
+</div>
+<div class="row">
+  <div class="col-12 col-md-4">
+    <div class="card" style="width: 18rem;">
+      <img src="images/Rectangle 19.svg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Sobha Hearland II Villas</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet bibendum.</p>
+        <p><img src="images/Stars.svg" alt=""> 4.83</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-md-4">
+    <div class="card" style="width: 18rem;">
+      <img src="images/Rectangle 20.svg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Sobha Hearland II Villas</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet bibendum.</p>
+        <p><img src="images/Stars.svg" alt=""> 4.83</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 col-md-4">
+    <div class="card" style="width: 18rem;">
+      <img src="images/Rectangle 21.svg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Sobha Hearland II Villas</h5>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur. Adipiscing imperdiet bibendum.</p>
+        <p><img src="images/Stars.svg" alt=""> 4.83</p>
+      </div>
+    </div>
+  </div>
+</div>
+    </section>
   </body>
 </html>
